// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manager create validates payload before creating any record (comments) 1`] = `
Array [
  Object {
    "field": "title",
    "message": "The title is required.",
    "validation": "required",
  },
  Object {
    "field": "body",
    "message": "The body is required.",
    "validation": "required",
  },
]
`;

exports[`Manager create validates payload before creating any record (posts) 1`] = `
Array [
  Object {
    "field": "title",
    "message": "The title is required.",
    "validation": "required",
  },
  Object {
    "field": "description",
    "message": "The description is required.",
    "validation": "required",
  },
  Object {
    "field": "content",
    "message": "The content is required.",
    "validation": "required",
  },
  Object {
    "field": "av_cpc",
    "message": "The av_cpc is required.",
    "validation": "required",
  },
  Object {
    "field": "category",
    "message": "The category is required.",
    "validation": "required",
  },
  Object {
    "field": "user_id",
    "message": "The user_id is required.",
    "validation": "required",
  },
  Object {
    "field": "published_at",
    "message": "The published_at is required.",
    "validation": "required",
  },
  Object {
    "field": "scheduled_for",
    "message": "The scheduled_for is required.",
    "validation": "required",
  },
]
`;

exports[`Manager create validates payload before creating any record (tags) 1`] = `
Array [
  Object {
    "field": "name",
    "message": "The name is required.",
    "validation": "required",
  },
]
`;

exports[`Manager create validates payload before creating any record (users) 1`] = `
Array [
  Object {
    "field": "full_name",
    "message": "The full_name is required.",
    "validation": "required",
  },
  Object {
    "field": "email",
    "message": "The email is required.",
    "validation": "required",
  },
  Object {
    "field": "password",
    "message": "The password is required.",
    "validation": "required",
  },
]
`;
